<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_large_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_description"
        android:layout_below="@id/tv_large_title"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/tv_small_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_developer"
        android:textStyle="bold"
        android:layout_below="@id/tv_description"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"/>

    <ImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/tv_small_title"
        android:src="@drawable/wilona"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_profile"
        android:layout_centerHorizontal="true"
        android:text="@string/about_developer_name"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_centerHorizontal="true"
        android:text="@string/about_developer_mail"
        android:layout_marginTop="8dp"/>

</RelativeLayout>